using PizzaPlace.Models.Types;

namespace PizzaPlace.Pizzas;

public abstract record Pizza(PizzaRecipeType Type);
//,,
